docs: add options.once

--- a/site/docs/en/api/index.mdx
+++ b/site/docs/en/api/index.mdx
@@ -5,13 +5,14 @@
 Subscribe the key's keyboard event.
 
 - Params
-  - `key` **string** The key to subscribe to.
-  - `handler` **function** The callback function to be called when the key is pressed.
-  - `options` **string | object** The options of the key event. If it is a string, it will be converted to an object, and the `scope` property will be set to the string value. If it is an object, the `scope` property will be set to the value of the `scope` property.
-    - `options.scope` **string** The scope of the key event. If the scope is not set, the default is `default`.
-    - `options.splitValue` **boolean** Whether to split the value of the key event. If it is not set, the default is `false`.
-    - `options.keydown` **boolean** Whether to subscribe to the keydown event. If it is not set, the default is `true`.
-    - `options.keyup` **boolean** Whether to subscribe to the keyup event. If it is not set, the default is `false`.
+  - `key` **string** The key to subscribe to;
+  - `handler` **function** The callback function to be called when the key is pressed;
+  - `options` **string | object** The options of the key event. If it is a string, it will be converted to an object, and the `scope` property will be set to the string value. If it is an object, the `scope` property will be set to the value of the `scope` property;
+    - `options.scope` **string** The scope of the key event. If the scope is not set, the default is `default`;
+    - `options.splitValue` **boolean** Whether to split the value of the key event. If it is not set, the default is `false`;
+    - `options.keydown` **boolean** Whether to subscribe to the keydown event. If it is not set, the default is `true`;
+    - `options.keyup` **boolean** Whether to subscribe to the keyup event. If it is not set, the default is `false`;
+    - `options.once` **boolean** Whether to subscribe to the key event only once. If it is not set, the default is `false`;
 
 :::info
 The `subscribe` interface returns a function that can be called to cancel the current event listener.
