--- a/site/docs/zh/api/index.mdx
+++ b/site/docs/zh/api/index.mdx
@@ -5,13 +5,14 @@
 订阅键盘事件。
 
 - 参数
-  - `key` **string** 需要订阅的键值。
-  - `handler` **function** 当键被按下时调用的回调函数。
-  - `options` **string | object** 键盘事件的选项。如果它是一个字符串，它将被转换为一个对象，并且 scope 属性将被设置为字符串的值。如果它是一个对象，scope 属性将被设置为 scope 属性的值。
-    - `options.scope` **string** 键盘事件的范围。如果没有设置，缺省值是 `default`。
-    - `options.splitValue` **boolean** 是否分割键盘事件的值。如果没有设置，缺省值是 `false。`
-    - `options.keydown` **boolean** 是否订阅keydown事件。如果没有设置，缺省值是 `true。`
-    - `options.keyup` **boolean** 是否订阅keyup事件。如果没有设置，缺省值是 `false。`
+  - `key` **string** 需要订阅的键值；
+  - `handler` **function** 当键被按下时调用的回调函数；
+  - `options` **string | object** 键盘事件的选项。如果它是一个字符串，它将被转换为一个对象，并且 scope 属性将被设置为字符串的值。如果它是一个对象，scope 属性将被设置为 scope 属性的值；
+    - `options.scope` **string** 键盘事件的范围。如果没有设置，缺省值是 `default`；
+    - `options.splitValue` **boolean** 是否分割键盘事件的值。如果没有设置，缺省值是 `false`；
+    - `options.keydown` **boolean** 是否订阅keydown事件。如果没有设置，缺省值是 `true`；
+    - `options.keyup` **boolean** 是否订阅keyup事件。如果没有设置，缺省值是 `false`；
+    - `options.once` **boolean** 是否只订阅一次事件。如果没有设置，缺省值是 `false`；
 
 :::info
 `subscribe` 接口返回一个函数，可以调用该函数来取消当前的事件监听器。
