docs: update doc for on and off

--- a/site/docs/en/api/index.mdx
+++ b/site/docs/en/api/index.mdx
@@ -7,7 +7,7 @@ Subscribe the key's keyboard event.
 - Params
   - `key` **string** The key to subscribe to;
   - `handler` **function** The callback function to be called when the key is pressed;
-  - `options` **string | object** The options of the key event. If it is a string, it will be converted to an object, and the `scope` property will be set to the string value. If it is an object, the `scope` property will be set to the value of the `scope` property;
+  - `options` **undefined | string | object** The options of the key event. If it is a string, it will be converted to an object, and the `scope` property will be set to the string value. If it is an object, the `scope` property will be set to the value of the `scope` property;
     - `options.scope` **string** The scope of the key event. If the scope is not set, the default is `default`;
     - `options.splitValue` **boolean** Whether to split the value of the key event. If it is not set, the default is `false`;
     - `options.keydown` **boolean** Whether to subscribe to the keydown event. If it is not set, the default is `true`;
@@ -27,6 +27,31 @@ const unsubscribe = subscribe("scope", () => {
 
 unsubscribe();
 ```
+
+## on
+
+`on` is an alias for `subscribe`.
+
+:::info
+Why is there an alias? Because `on` and `off` is more in line with the semantics of the event.
+:::
+
+## off
+
+`off` could cancel the event listener.
+
+- Params
+  - `key` **string** The key to cancel the event listener;
+  - `handler` **undefined | function** The callback function to cancel the event listener;
+  - `options` **undefined | object**
+    - `options.scope` **string** The scope of the key event. If the scope is not set, the default is `default`;
+    - `options.splitValue` **boolean** Whether to split the value of the key event. If it is not set, the default is `false`;
+    - `options.keydown` **boolean** Whether to subscribe to the keydown event. If it is not set, the default is `true`;
+    - `options.keyup` **boolean** Whether to subscribe to the keyup event. If it is not set, the default is `false`;
+
+:::info
+If the `handler` and `options` is not set, all event listeners of the key will be canceled.
+:::
 
 ## getScope
 
