--- a/site/docs/zh/api/index.mdx
+++ b/site/docs/zh/api/index.mdx
@@ -7,7 +7,7 @@
 - 参数
   - `key` **string** 需要订阅的键值；
   - `handler` **function** 当键被按下时调用的回调函数；
-  - `options` **string | object** 键盘事件的选项。如果它是一个字符串，它将被转换为一个对象，并且 scope 属性将被设置为字符串的值。如果它是一个对象，scope 属性将被设置为 scope 属性的值；
+  - `options` **undefined | string | object** 键盘事件的选项。如果它是一个字符串，它将被转换为一个对象，并且 scope 属性将被设置为字符串的值。如果它是一个对象，scope 属性将被设置为 scope 属性的值；
     - `options.scope` **string** 键盘事件的范围。如果没有设置，缺省值是 `default`；
     - `options.splitValue` **boolean** 是否分割键盘事件的值。如果没有设置，缺省值是 `false`；
     - `options.keydown` **boolean** 是否订阅keydown事件。如果没有设置，缺省值是 `true`；
@@ -27,6 +27,31 @@ const unsubscribe = subscribe("scope", () => {
 
 unsubscribe();
 ```
+
+## on
+
+`on` 是 `subscribe` 的别名。
+
+:::info
+为什么有一个别名？因为 `on` 和 `off` 更符合事件的语义。
+:::
+
+## off
+
+`off` 可以取消事件监听器。
+
+- Params
+  - `key` **string** 需要取消订阅的键值；
+  - `handler` **undefined | function** 需要取消订阅的回调函数；
+  - `options` **undefined | object**
+    - `options.scope` **string** 键盘事件的范围。如果没有设置，缺省值是 `default`；
+    - `options.splitValue` **boolean** 是否分割键盘事件的值。如果没有设置，缺省值是 `false`；
+    - `options.keydown` **boolean** 是否订阅keydown事件。如果没有设置，缺省值是 `true`；
+    - `options.keyup` **boolean** 是否订阅keyup事件。如果没有设置，缺省值是 `false`；
+
+:::info
+如果 `handler` 和 `options` 都没有设置，将会取消该键的所有事件监听器。
+:::
 
 ## getScope
 
