docs: fix toc wrong dispaly

--- a/site/docs/en/guide/index.mdx
+++ b/site/docs/en/guide/index.mdx
@@ -82,7 +82,7 @@ subscribe("scope, a", () => {
 });
 ```
 
-### Compose key
+### Compose Key
 
 Through `'+'`, you can monitor the key combination, and you can also customize the key combination separator.
 
@@ -113,7 +113,7 @@ subscribe("scope", defaultHandler, "default");
 subscribe("scope", subHandler, { scope: "sub" });
 ```
 
-#### Special scope `"*"`
+#### Special Scope *
 
 If `scope` is specified as `"*"`, the listener function will ignore the `scope` setting.
 
