--- a/site/docs/zh/guide/index.mdx
+++ b/site/docs/zh/guide/index.mdx
@@ -113,7 +113,7 @@ subscribe("scope", defaultHandler, "default");
 subscribe("scope", subHandler, { scope: "sub" });
 ```
 
-#### 特殊作用域 `"*"`
+#### 特殊作用域 *
 
 如果作用域设置为 `"*"`，监听函数将忽略作用域设置。
 
