--- a/site/docs/zh/guide/index.mdx
+++ b/site/docs/zh/guide/index.mdx
@@ -6,7 +6,13 @@ import { PackageManagerTabs } from "@theme";
 
 ## 安装
 
-<PackageManagerTabs command="install toukey -S" />
+<PackageManagerTabs
+  command={{
+    npm: "npm install toukey -S",
+    yarn: "yarn add toukey -S",
+    pnpm: "pnpm add toukey -S"
+  }}
+/>
 
 ## 使用
 
@@ -113,7 +119,7 @@ subscribe("scope", defaultHandler, "default");
 subscribe("scope", subHandler, { scope: "sub" });
 ```
 
-#### 特殊作用域 *
+#### 特殊作用域 \*
 
 如果作用域设置为 `"*"`，监听函数将忽略作用域设置。
 
